--- a/Algebra.tex
+++ b/Algebra.tex
@@ -52,6 +52,7 @@
 \newcommand{\Orb}[1]{\mathcal{O}rb\left( #1 \right)}
 \newcommand{\Stab}[1]{\mathcal{S}tab\left( #1 \right)}
 \newcommand{\gen}[1]{\langle x \rangle}
+\newcommand{\Z}{\mathbb{Z}}
 
 \newcommand{\fun}[5]{\begin{align*}
 	#1 \colon #2 &\to #3 \\
@@ -375,7 +376,7 @@ Per Cauchy esistono $ x, y \in G $ di ordine, rispettivamente, 2 e 3.
 	\]
 	Abbiamo così scomposto il nostro sottogruppo come desiderato, poiché conosciamo il ker della trasformazione
 	\[ H = f^{-1}(0) \sqcup f^{-1}(1) = (H \cap C_n) \sqcup \tau (H\cap C_n) \]
-	Poiché $ (H \cap C_n) < C_n $ possiamo vederlo come il sottogruppo generato da una potenza della rotazione elementare \[ H \cap C_n = \langle \rho^d \colon d \mid n \rangle \] Il suo unico laterale sarà allora composto dagli $ d $ elementi della forma  \begin{align*}\tau(H\cap C_n) &=  \{\tau\rho^d, \tau\rho^2d, \dots, \tau\rho^{n-m} \} \\ &= \{\sigma\rho^{d+i}, \sigma\rho^{2d+i}, \dots, \sigma\rho^{n-m +i} \}\end{align*}  che è facile convincersi dipendere solamente dalla classe di $ i \mod m $.
+	Poiché $ (H \cap C_n) < C_n $ possiamo vederlo come il sottogruppo generato da una potenza della rotazione elementare \[ H \cap C_n = \langle \rho^d \colon d \mid n \rangle \] Il suo unico laterale sarà allora composto dagli $ d $ elementi della forma  \begin{align*}\tau(H\cap C_n) &=  \{\tau\rho^d, \tau\rho^{2d}, \dots, \tau\rho^{n-d} \} \\ &= \{\sigma\rho^{d+i}, \sigma\rho^{2d+i}, \dots, \sigma\rho^{n-d +i} \}\end{align*}  che è facile convincersi dipendere solamente dalla classe di $ i \mod d $.
 \end{proof}
 
 \textbf{Esercizi.}
@@ -443,7 +444,7 @@ Per Cauchy esistono $ x, y \in G $ di ordine, rispettivamente, 2 e 3.
 			& = \text{sgn}(\sigma)\cdot \text{sgn}(\tau)
 		\end{align*}
 	\end{enumerate}
-	Infine, tutte le trasposizioni hanno segno negativo. 
+	Per concludere, osserviamo che tutte le trasposizioni hanno segno negativo. 
 \end{proof}
 \begin{definition}[Gruppo Alterno]
 	Chiamiamo $ \mathcal{A}_n $ o \emph{gruppo alterno} il sottogruppo delle permutazioni pari
@@ -582,13 +583,13 @@ Q_8
 	Così facendo possiamo continuare ad aggiungere elementi fino a saturare il gruppo e raggiungere la tesi.
 \end{proof}
 Sia ora $ g \in G $ l'elemento di ordine 4 richiesto e $ C_4 = \langle g \rangle $. Sia $ h \notin C_4 $ e consideriamo l'azione di coniugio di $ h $ su $ C_4 $
-\fun{\phi_g}{C_4}{C_4}{x}{hxh^{-1}}
+\fun{\varphi_g}{C_4}{C_4}{x}{hxh^{-1}}
 ben definita perché $ C_4 $, avendo indice $ 2 $, è normale in $ G $. Poiché $ \Aut{\mathbb{Z}_4} \cong \mathbb{Z}_2 $, abbiamo solo due possibilità: $$  \varphi_g =  id^{\pm 1}  $$
 
 \begin{itemize}
 	\item $ \left[\varphi_g =  id, \, \text{ord}(h) =2\right] $. Dunque gli elementi di $ C_4 $ commutano con $ h $, l'intersezione tra $ C_4 $ e $ \langle h \rangle $ è banale e il loro prodotto genera $ G $ per ragioni di cardinalità, pertanto \[ G \cong  \langle h \rangle\times C_4  \cong  \mathbb{Z}_2\times\mathbb{Z}_4 \]
 	\item $ \left[\varphi_g =  id, \, \text{ord}(h) =4\right] $. Possiamo considerare $ h^2 $ e ricondurci al caso precedente.
-	\item $ \left[\varphi_g =  id^{-1}, \, \text{ord}(h) =2\right] $. Abbiamo che $ hgh = g^-1 $, quindi per la nostra caratterizzazione dei gruppi diedrali \[ G \cong D_4 \]
+	\item $ \left[\varphi_g =  id^{-1}, \, \text{ord}(h) =2\right] $. Abbiamo che $ hgh = g^{-1} $, quindi per la nostra caratterizzazione dei gruppi diedrali \[ G \cong D_4 \]
 	\item $ \left[\varphi_g =  id^{-1}, \, \text{ord}(h) =4\right] $. Anche ord$ (gh) = 4 $. Infatti
 	\[ e = ghgh = ghgh^{-1}hh = hh \neq e \]
 	Dunque abbiamo trovato l'ordine di tutti gli elementi, possiamo costruire un'isomorfismo esplicito con $ Q_8 $.
@@ -708,10 +709,10 @@ e necessariamente dobbiamo avere che
 ma, poiché $ \varphi $ è un omomorfismo, abbiamo che
 \[ \text{ord}\left(\varphi_y\right) \mid \text{ord}(y) = p \]
 quindi abbiamo solo due casi: $ \text{ord}\left(\varphi_y\right) = 1 $ e $ \text{ord}\left(\varphi_y\right) = p $. Nel primo caso $ \varphi $ manda ogni elemento nell'identità, dunque il prodotto semidiretto è in realtà diretto e dunque
-\[ G \cong \mathbb{Z}_{p}\times\mathbb{Z}_{q} \]
+\[ \boxed{G \cong \mathbb{Z}_{p}\times\mathbb{Z}_{q}} \]
 Nel secondo caso dobbiamo avere $$  p = \text{ord}\left(\varphi_y\right) \mid \text{ord}(x^k) \mid q-1  $$
 Vogliamo mostrare che qualunque omomorfismo $ \psi $ da $ K $ a $ \Aut{H} $, non banale, costruisce un prodotto semidiretto isomorfo a $ G $ e ci è pertanto concesso scrivere
-\[ G \cong H \rtimes K \]
+\[ \boxed{G \cong H \rtimes K} \]
 
 Osserviamo innanzitutto che le azioni del tipo
 \[ \varphi_i: y \mapsto \varphi_{y^i}: x \mapsto y^ixy^{-i} \qquad 0 \leq i < p \]
@@ -801,14 +802,46 @@ A questo punto è facile convincersi che la mappa \fun{\Phi}{H \rtimes_{\varphi_
 		Osserviamo che $ gp^n \in G_{m} $, poiché $$  m (gp^n) = (mp^n) g = |G| g = 0  $$
 		Analogamente $ gm \in G_{p^n} $ e pertanto la somma dei due sottogruppi contiene $ G $ 
 	\end{enumerate}
-	
 \end{proof}
 
 \textbf{Esercizi.}
 \begin{enumerate}
-	\item Chi è il 2-sylow di $ D_4 $?
+	\item Chi è il 2-sylow di $ \mathcal{S}_4 $?
 	\item Chi sono i gruppi di ordine $ 12 $?
 \end{enumerate}
+
+\textbf{Classificazione dei gruppi di ordine 12.}
+
+Quanti possono essere i $ p $-sylow?
+I 3-sylow sono necessariamente di ordine $ 3 $, pertanto ciclici, e possono essere $ n_3 = 1, 4 $. I 2-sylow sono di ordine $ 4 $, quindi isomorfi a $ \Z_2 \times \Z_2 $ o $ \Z_4 $, e sono $ n_2 = 1, 3 $. Se $ P_3 $ non è normale, allora ne ho 4 copie con intersezione banale e rimane spazio solo per un $ P_2 $, che sarà normale.
+
+Quindi uno tra un 2-sylow e un 3-sylow dev'essere normale, inoltre sono ciclici e avranno intersezione banale e il loro prodotto ha necessariamente cardinalità $ 12 $. Quindi abbiamo scoperto che $ G $ è isomorfo al prodotto semidiretto tra un sylow e l'altro. Analizziamo le varie possibilità
+
+\begin{itemize}
+	\item $ \Z_4 \rtimes_\varphi \Z_3 $. Abbiamo
+	\[ \varphi : \Z_3 \to \Aut{\Z_4} \cong \Z_2 \]
+	che è dunque necessariamente banale e otteniamo
+	\[ \boxed{G \cong \Z_4 \times \Z_3} \]
+	\item $ \Z_2 \times \Z_2 \rtimes_\varphi \Z_3 $. Abbiamo
+	\[ \varphi : \Z_3 \to \Aut{\Z_2\times\Z_2} \cong \mathcal{S}_3 \]
+	che avrà immagine nel sottogruppo di ordine $ 3 $, abbiamo quindi l'automorfismo banale, da cui
+	\[  \boxed{G \cong \Z_2 \times \Z_2 \times \Z_3} \]
+	e quelli associati a $ \sigma $ e $ \sigma^2 $, che vogliamo mostrare indurre lo stesso prodotto. Infatti, scelto un $ \phi $ non banale, possiamo far agire $ G $ sull'insieme dei suoi 3-sylow per coniugio: sia \fun{\Phi}{G}{\mathcal{S}({\text{3-sylow di G}})\cong \mathcal{S}_4}{g}{\varphi_g : H \mapsto gHg^{-1}}
+	Osserviamo che $ N(P_3) = P_3 $, per la formula delle classi. Allora $$  \ker\Phi = \bigcap \Stab{H} = \bigcap N(H) = \bigcap H = \{ e \}  $$ dunque $ \Phi $ è iniettivo e mappa $ G $ in un sottogruppo di ordine 12 di $ \mathcal{S}_4 $. Ma l'unico sottogruppo di questa dimensione è $ \mathcal{A}_4 $, quindi entrambi i gruppi generati dal prodotto non diretto sono isomorfi a questo sottogruppo.
+	\[ \boxed{G \cong \mathcal{A}_4} \]
+	\item $ \Z_3 \rtimes_\varphi \Z_4 $. Abbiamo
+	\[ \varphi : \Z_4 \to \Aut{\Z_3} \cong \Z_2 \]
+	che dunque può essere solo $ \pm id $. Il caso banale ci restituisce un prodotto diretto, già considerato, l'altro è un gruppo buffo
+	\[ \boxed{G \cong \Z_3 \rtimes_{-id} \Z_4} \]
+	\item $ \Z_3 \rtimes_\varphi \Z_2 \times \Z_2  $. Abbiamo
+	\[ \varphi : \Z_2 \times \Z_2  \to \Aut{\Z_3} \cong \Z_2 \]
+	e abbiamo, oltre all'omomorfismo banale, 3 modi di proiettare $ \Z_2 \times \Z_2  $ su un suo fattore. A meno di isomorfismi di $ \Z_2 \times \Z_2  $, $ \Z_3 $ commuta con uno dei fattori e agisce con $ -id $ sull'altro quindi
+	\[ \boxed{G \cong \Z_3\times \Z_2 \rtimes_{-id} \Z_2 \cong D_6} \]
+\end{itemize}
+
+
+
+
 \end{multicols}
 
 \subsection{Automorfismi di un gruppo buffo}
@@ -832,8 +865,8 @@ A questo punto è facile convincersi che la mappa \fun{\Phi}{H \rtimes_{\varphi_
 	 \begin{itemize}
 	 	\item [$ \beta $.] Consideriamo le possibili immagini per dimensione, tra i sottogruppi dei quaternioni:
 	 	\begin{itemize}
-	 		\item [$\{e\}  $.] Ovviamente abbiamo un omomorfismo banale.
-	 		\item [$ \mathbb{Z}_2 $.] Il nucleo dev'essere un sottogruppo di indice 2 e il diedrale ne ha tre: $ \langle \rho \rangle, \langle \rho^2, \sigma \rangle, \langle \rho^2, \sigma\rho \rangle $.
+	 		\item [$\{e\}  $.][$ \checkmark $] Ovviamente abbiamo un omomorfismo banale.
+	 		\item [$ \mathbb{Z}_2 $.][$ \checkmark $] Il nucleo dev'essere un sottogruppo di indice 2 e il diedrale ne ha tre: $ \langle \rho \rangle, \langle \rho^2, \sigma \rangle, \langle \rho^2, \sigma\rho \rangle $.
 	 		\item [$ \mathbb{Z}_4 $.] L'unico sottogruppo di indice $ 4 $ del diedrale è $ \langle \rho \rangle \cong \mathbb{Z}_4 $ ed è il nucleo di un omomorfismo che uccide i termini di ordine $ 4 $.
 	 		\item [$ Q_8 $.] Non è possibile, sarebbe un isomorfismo!
 	 	\end{itemize}
@@ -918,28 +951,31 @@ Qui succederanno cose. \\
 		\item $ \langle g \rangle \cap K = \{e\} $. Infatti se $ b $ stesse nell'intersezione, $ bH $ apparterrebbe all'intersezione $ \langle gH \rangle \cap \faktor{K}{H} $ che è $ H $, dunque $ b \in H $.
 		\item $ G = \langle g \rangle K $. Per ragioni di cardinalità. 
 	\end{itemize}
+
+L'unicità è lasciata al lettore.
+
 \end{proof}
 	
 \textbf{Classificazione dei Gruppi di Ordine 30.}\\
 Tiriamo a caso qualche gruppo di quest'ordine
-\[ \mathbb{Z}_2\times\mathbb{Z}_3\times\mathbb{Z}_5 \qquad D_{15} \qquad D_5\times\mathbb{Z}_3 \qquad D_{3}\times\mathbb{Z}_5 \]
+\[ \boxed{\mathbb{Z}_2\times\mathbb{Z}_3\times\mathbb{Z}_5} \qquad \boxed{D_{15}} \qquad \boxed{D_5\times\mathbb{Z}_3} \qquad \boxed{D_{3}\times\mathbb{Z}_5} \]
 questi sono distinti perché il primo è l'unico abeliano e i centri di dei seguenti sono rispettivamente $ \{e\},\, \mathbb{Z}_3,\, \mathbb{Z}_5 $. Sappiamo che
 \[ n_5 \equiv 1 \mod{5} \qquad\text{e}\qquad n_5 \mid 6 \]
 per il Teorema di Sylow \ref{sylow} e perché $ n_5 \mid |G| $ in quanto cardinalità dell'orbita dell'azione di coniugio, rispettivamente. E, analogamente
 \[ n_3 \equiv 1 \mod{3} \qquad\text{e}\qquad n_3 \mid 10 \]
-Allora, se $ P_5 $ non è normale, ci sono sei 5-sylow, quindi 24 elementi di ordine 5. Tra i pochi elementi che rimangono non ci stanno sicuramente dieci 3-sylow e pertanto $ P_3 $ è normale. Allora $ P_3 $ e $ P_5 $ commutano, dunque
+Allora, se $ P_5 $ non è normale, ci sono sei 5-sylow, quindi 24 elementi di ordine 5. Tra i pochi elementi che rimangono non ci stanno sicuramente dieci 3-sylow e pertanto $ P_3 $ è normale. Allora $ P_3 $ e $ P_5 $ commutano (perché uno dei due è contenuto nel normalizzatore dell'altro), dunque
 \[ P_3P_5 < G \]
 e avendo indice $ 2 $ è normale, nonché ciclico.
 
 Abbiamo allora che
 \[ G \cong \mathbb{Z}_{15} \rtimes_\varphi \mathbb{Z}_2 \]
 per una qualche azione di coniugio 
-\fun{\varphi}{\mathbb{Z}_2}{\mathbb{Z}_{15}}{y}{\varphi_y: x \mapsto yxy^{-1} = x^a}
-sapendo che $ \phi_y^2(x) = x^{a^2} = x $, dobbiamo avere che $$  a^2 \equiv 1 \mod{15}  $$ e risolvendo il sistema di diofantee troviamo
+\fun{\varphi}{\mathbb{Z}_2}{\Aut{\mathbb{Z}_{15}}\cong \mathbb{Z}_5^\times\times\mathbb{Z}_3^\times}{y}{\varphi_y: x \mapsto yxy^{-1} = x^a}
+sapendo che $ \varphi_y^2(x) = x^{a^2} = x $, dobbiamo avere che $$  a^2 \equiv 1 \mod{15}  $$ e risolvendo il sistema di diofantee troviamo
 \[ a = \pm 1,\, \pm 4 \mod{15} \]
-e ognuna di questa azioni ci costruisce un prodotto diretto a uno dei gruppi trovati all'inizio.
-
-Devo Finireeeeeeeee
+e ognuna di questa azioni induce un prodotto semidiretto isomorfo a uno dei gruppi trovati all'inizio. In particolare $ a = 1 $ è l'automorfismo identico, che induce il prodotto diretto, che restituisce il gruppo abeliano, mentre $ a = -1 $ sappiamo già essere l'omomorfismo che genera il gruppo diedrale. Per $ a = 4 $ troviamo l'automorfismo che fissa $ \mathbb{Z}_3 $, per $ a = -4 $ quello che fissa $ \mathbb{Z}_5 $, in entrambi i casi uno dei fattori a sinistra del prodotto semidiretto commuta anche col fattore di destra, siamo così autorizzati a raccoglierlo all'esterno per ottenere, rispettivamente, $ D_5\times\mathbb{Z}_3 $ e $ D_{3}\times\Z_5 $.
+	
+Se invece $ P_5 $ fosse normale?
 	
 \end{multicols}
 
