--- a/Algebra.tex
+++ b/Algebra.tex
@@ -695,24 +695,36 @@ dunque $ \Phi $ è un isomorfismo come desiderato.
 	\item $ D_n \cong \langle \rho \rangle \rtimes_\varphi \langle \sigma \rangle $, con $ \varphi $ di coniugio.
 \end{enumerate}
 
-\columnbreak
+% \columnbreak
 \textbf{Classificazione dei gruppi di ordine pq.} \\
 
 Se $ p = q $, allora $ |G| = p^2 $, quindi $ G $ è abeliano. Allora necessariamente
 \[ G \cong \mathbb{Z}_{p^2}  \qquad \text{oppure} \qquad G \cong \mathbb{Z}_{p}\times\mathbb{Z}_{p} \]
 Se $ p < q $, allora ho due elementi $ x, y $ di ordine, rispettivamente, $ p $ e $ q $, che generano relativi gruppi ciclici. Il più grande dei quali sarà normale $$  K = \langle x \rangle < G \quad\text{e}\quad H = \langle y \rangle \lhd G $$ per il teorema \ref{ppp}. Inoltre osserviamo che $ HK = G $ e i due sottogruppi hanno intersezione banale. Quindi
-\[ G \cong H \rtimes_{\varphi_1} K \]
+\[ G \cong H \rtimes_{\varphi} K \]
 dove
-\fun{\varphi_1}{K}{\Aut{H} \cong \mathbb{Z}_q^\times}{y}{\varphi_y: x \mapsto yxy^{-1}}
+\fun{\varphi_1}{K}{\Aut{H} \cong \mathbb{Z}_q^\times}{y}{\varphi_y: x \mapsto yxy^{-1} = x^a}
 e necessariamente dobbiamo avere che
-\[ yxy^{-1} = x^k \qquad\text{con}\quad (k, q) = 1 \]
+\[ yxy^{-1} = x^a \qquad\text{con}\quad (a, q) = 1 \]
 ma, poiché $ \varphi $ è un omomorfismo, abbiamo che
 \[ \text{ord}\left(\varphi_y\right) \mid \text{ord}(y) = p \]
 quindi abbiamo solo due casi: $ \text{ord}\left(\varphi_y\right) = 1 $ e $ \text{ord}\left(\varphi_y\right) = p $. Nel primo caso $ \varphi $ manda ogni elemento nell'identità, dunque il prodotto semidiretto è in realtà diretto e dunque
 \[ \boxed{G \cong \mathbb{Z}_{p}\times\mathbb{Z}_{q}} \]
-Nel secondo caso dobbiamo avere $$  p = \text{ord}\left(\varphi_y\right) \mid \text{ord}(x^k) \mid q-1  $$
+
+\textsf{Questa parte dev'essere sistemata}
+
+\iffalse Nel secondo caso dobbiamo avere $$  p = \text{ord}\left(\varphi_y\right) \mid \text{ord}(x^a) \mid q-1  $$
 Vogliamo mostrare che qualunque omomorfismo $ \psi $ da $ K $ a $ \Aut{H} $, non banale, costruisce un prodotto semidiretto isomorfo a $ G $ e ci è pertanto concesso scrivere
 \[ \boxed{G \cong H \rtimes K} \]
+
+L'azione per coniugio è completamente determinata dal valore dell'automorfismo associato a un generatore $ y $ di $ K $, valutato su un generatore di $ x $ di $ H $
+\[ \varphi_y: x \mapsto yxy^{-1} = x^a \]
+che deve soddisfare $ a \in \Z_q $ e $ a^p \equiv 1 \mod{p} $, che sappiamo avere $ p-1 $ soluzioni.
+
+
+
+
+
 
 Osserviamo innanzitutto che le azioni del tipo
 \[ \varphi_i: y \mapsto \varphi_{y^i}: x \mapsto y^ixy^{-i} \qquad 0 \leq i < p \]
@@ -725,6 +737,7 @@ sono tutte e sole le azioni di $ K $ su $ H $:
 \end{itemize}
 
 A questo punto è facile convincersi che la mappa \fun{\Phi}{H \rtimes_{\varphi_1} K}{H \rtimes_{\varphi_i} K}{(x, y)}{(x, y^{k})} è un'isomorfismo tra tutti i possibili prodotti semidiretti.
+\fi
 \end{multicols}
 
 \subsection{Teorema di Sylow}
@@ -907,9 +920,9 @@ Mostriamo ora che le condizioni trovate sono sufficienti. Ci basta mostrare che 
 \[ \varphi(x, y) = (\alpha(x)\beta(y), \gamma(x)\delta(y)) = (e, e) \]
 Visto che $ \beta(y) $ e $ \gamma(x) $ stanno nei centri dei rispettivi insiemi, anche $ \alpha(x) $ e $ \delta(y) $, che sono i loro inversi, vi staranno. Ma $ \alpha $ e $ \delta $ sono isomorfismi, pertanto anche $ x, y $ staranno nei centri dei loro rispettivi gruppi! Ma $ \beta $ e $ \gamma $ contengono i centri nei loro nuclei, quindi si annullano, così come i rispettivi isomorfismi. Così $ x, y $ sono necessariamente l'elemento neutro del proprio gruppo e $ \ker\varphi = \{(e, e)\} $. \\
 
-Conosciamo già $ \Aut{D_4} $, cerchiamo, per concludere, di capire chi sia $ \Aut{Q_8} $. \\
+Conosciamo già $ \Aut{D_4} $, cerchiamo, per concludere, di capire chi sia{\tiny } $ \Aut{Q_8} $. \\
 
-Qui succederanno cose. \\
+\textsf{Qui succederanno cose.} \\
 
 \begin{theorem}
 	Il gruppo alterno $ \mathcal{A}_n $ è semplice per $ n \geq 5 $.
